--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "Brian Kintz",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.1.2",
+    "cssnano": "^3.4.0",
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-postcss": "^0.7.1"
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.6"
