--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "cssnano": "^3.4.0",
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-postcss": "^0.7.1"
+    "grunt-postcss": "^0.7.1",
+    "grunt-sass": "^1.1.0"
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.6"
