--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 before_script:
-  - apt-get update -qq && apt-get -y nodejs npm
-  - npm install -g grunt-cli
+  - sudo apt-get update -qq && sudo apt-get -y nodejs npm
+  - sudo npm install -g grunt-cli
   - npm install
 
 stages:
