--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 before_script:
   - whoami
   - sudo apt-get update -qq && sudo apt-get install -y nodejs npm
+  - sudo npm install -g npm@latest
   - sudo npm install -g grunt-cli
   - npm install
 
