Don't install npm over nodejs-internal npm

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
 
 deploy:
   script:
-    - sudo apt-get update -qq && sudo apt-get install -y nodejs npm
+    - sudo apt-get update -qq && sudo apt-get install -y nodejs
     - sudo npm install -g npm@latest
     - sudo npm install -g grunt-cli
     - npm install
