--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "author": "Brian Kintz",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^6.4.1",
-    "cssnano": "^3.7.4",
-    "grunt": "^1.0.1",
+    "animate-sass": "^0.8.2",
+    "autoprefixer": "^8.6.4",
+    "cssnano": "^3.10.0",
+    "grunt": "^1.0.3",
     "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-postcss": "^0.8.0",
-    "grunt-sass": "^1.2.1"
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "^3.0.0",
+    "node-sass": "^4.9.0"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.3.7"
+    "bootstrap": "^4.1.1"
   }
 }
