--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cssnano": "^3.10.0",
     "grunt": "^1.0.3",
     "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-postcss": "^0.9.0",
