--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^4.9.0"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1"
+    "bootstrap": "^4.1.1",
+    "waypoints": "^4.0.1"
   }
 }
