--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/pro-duotone-svg-icons": "^5.15.2",
-    "@fortawesome/pro-light-svg-icons": "^5.15.2",
-    "@fortawesome/pro-solid-svg-icons": "^5.15.2",
-    "@nuxtjs/sentry": "^5.0.2",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0-alpha2",
+    "@fortawesome/pro-light-svg-icons": "^6.0.0-alpha2",
+    "@fortawesome/pro-solid-svg-icons": "^6.0.0-alpha2",
+    "@nuxtjs/sentry": "^5.0.3",
+    "aos": "^2.3.4",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
@@ -23,20 +23,20 @@
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/tailwindcss": "^4.0.0-9",
+    "@nuxtjs/tailwindcss": "^4.0.1",
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.7.0",
+    "eslint-plugin-vue": "^7.8.0",
     "nuxt-lazysizes": "^1.2.0",
     "postcss": "^8.2.8",
     "postcss-hexrgba": "^2.0.1",
+    "postcss-import": "^14.0.0",
     "postcss-nested": "^5.0.5",
     "postcss-responsive-type": "^1.0.0",
-    "prettier": "^2.2.1",
-    "tailwind-css-variables": "^2.0.3"
+    "prettier": "^2.2.1"
   }
 }
