--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.0.0-alpha2",
-    "@fortawesome/pro-light-svg-icons": "^6.0.0-alpha2",
-    "@fortawesome/pro-solid-svg-icons": "^6.0.0-alpha2",
-    "@nuxtjs/sentry": "^5.0.3",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0-beta2",
+    "@fortawesome/pro-light-svg-icons": "^6.0.0-beta2",
+    "@fortawesome/pro-solid-svg-icons": "^6.0.0-beta2",
+    "@nuxtjs/sentry": "^5.1.4",
     "aos": "^2.3.4",
-    "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "core-js": "^3.19.1",
+    "nuxt": "^2.15.8"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^6.0.0",
+    "@babel/eslint-parser": "^7.16.0",
+    "@nuxtjs/eslint-config": "^7.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/tailwindcss": "^4.0.2",
-    "autoprefixer": "^10.2.5",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.8.0",
-    "nuxt-lazysizes": "^1.2.0",
-    "postcss": "^8.2.8",
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^3.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "nuxt-lazysizes": "^1.4.0",
+    "postcss": "^8.3.11",
     "postcss-hexrgba": "^2.0.1",
-    "postcss-import": "^14.0.0",
-    "postcss-nested": "^5.0.5",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.6",
     "postcss-responsive-type": "^1.0.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.4.1"
   }
 }
