--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.0.0-beta2",
-    "@fortawesome/pro-light-svg-icons": "^6.0.0-beta2",
-    "@fortawesome/pro-solid-svg-icons": "^6.0.0-beta2",
-    "@nuxtjs/sentry": "^5.1.4",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/pro-light-svg-icons": "^6.2.0",
+    "@fortawesome/pro-solid-svg-icons": "^6.2.0",
+    "@nuxtjs/sentry": "^6.0.0",
     "aos": "^2.3.4",
-    "core-js": "^3.19.1",
+    "core-js": "^3.25.1",
     "nuxt": "^2.15.8"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.0",
-    "@nuxtjs/eslint-config": "^7.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
+    "@babel/eslint-parser": "^7.18.9",
+    "@nuxtjs/eslint-config": "^11.0.0",
+    "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^3.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "nuxt-lazysizes": "^1.4.0",
-    "postcss": "^8.3.11",
-    "postcss-hexrgba": "^2.0.1",
-    "postcss-import": "^14.0.2",
+    "@nuxtjs/tailwindcss": "^5.3.3",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.4.0",
+    "nuxt-lazysizes": "^1.4.2",
+    "postcss": "^8.4.16",
+    "postcss-hexrgba": "^2.1.0",
+    "postcss-import": "^15.0.0",
     "postcss-nested": "^5.0.6",
     "postcss-responsive-type": "^1.0.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.7.1"
   }
 }
