--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,21 @@
-# Logs
-*.log
-npm-debug.log*
+# build output
+dist/
 
-# Dependency directories
-.npm
+# generated types
+.astro/
+
+# dependencies
 node_modules/
 
-# nuxt.js build output
-.nuxt
-dist
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# ESlint cache
-.eslintcache
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
