--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "astro": "^2.7.0"
+    "astro": "^2.7.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.3"
   }
 }
