--- a/netlify.toml
+++ b/netlify.toml
@@ -26,5 +26,5 @@
       img-src 'self' data:; \
       font-src 'self' https://use.typekit.net; \
       style-src 'self' 'unsafe-inline' https://use.typekit.net https://p.typekit.net; \
-      script-src 'self' https://kit.fontawesome.com https://netlify-cdp-loader.netlify.app; \
+      script-src 'self' https://kit.fontawesome.com https://ka-p.fontawesome.com https://app.netlify.com https://netlify-cdp-loader.netlify.app; \
     """
