--- a/netlify.toml
+++ b/netlify.toml
@@ -26,7 +26,7 @@
       img-src 'self' data:; \
       font-src 'self' https://use.typekit.net; \
       style-src 'self' 'unsafe-inline' https://use.typekit.net https://p.typekit.net; \
-      script-src 'self' https://kit.fontawesome.com https://netlify-cdp-loader.netlify.app; \
+      script-src 'self' 'unsafe-inline' https://kit.fontawesome.com https://netlify-cdp-loader.netlify.app; \
       connect-src 'self' https://ka-p.fontawesome.com; \
       frame-src 'self' https://app.netlify.com; \
     """
