--- a/netlify.toml
+++ b/netlify.toml
@@ -25,8 +25,8 @@
       manifest-src 'self'; \
       img-src 'self' data:; \
       font-src 'self' https://use.typekit.net; \
-      style-src 'self' 'unsafe-inline' https://use.typekit.net https://p.typekit.net; \
-      script-src 'self' 'unsafe-inline' https://kit.fontawesome.com https://netlify-cdp-loader.netlify.app; \
+      style-src 'self' 'unsafe-inline' https://use.typekit.net https://p.typekit.net https://unpkg.com; \
+      script-src 'self' 'unsafe-inline' https://kit.fontawesome.com https://netlify-cdp-loader.netlify.app https://unpkg.com; \
       connect-src 'self' https://ka-p.fontawesome.com; \
       frame-src 'self' https://app.netlify.com; \
     """
