--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^7.6.0",
     "astro": "^4.8.2"
   },
   "devDependencies": {
