--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^7.6.0",
-    "astro": "^4.8.2"
+    "@astrojs/vercel": "^8.1.3",
+    "astro": "^5.6.1"
   },
   "devDependencies": {
-    "@types/node": "^20.12.11"
+    "@types/node": "^22.14.0"
+  },
+  "overrides": {
+    "@vercel/node": {
+      "path-to-regexp": "8.2.0"
+    }
   }
 }
